fix: synchronization ui and fix logic